# dfc-shazam

./: .gitignore  .mcp.json.example  LICENSE  README.md  pyproject.toml
scripts/: extract_aliases.py
src/dfc_shazam/: __init__.py  config.py  models.py  server.py
src/dfc_shazam/apk/: __init__.py  index.py
src/dfc_shazam/chainctl/: __init__.py  client.py
src/dfc_shazam/mappings/: __init__.py  generic_base_images.csv  image_aliases.csv  image_runtime_config.py  images.py
src/dfc_shazam/tools/: __init__.py  find_equiv_cgr_image.py  image_docs.py  lookup_image.py  lookup_tag.py  map_package.py  search_packages.py  verify_packages.py  verify_tag.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_fixture_conversion.py
tests/fixtures/dockerfiles/go/08_gin_api/: Dockerfile  fixture.yaml  go.mod  go.sum  main.go
tests/fixtures/dockerfiles/go/09_multistage_static/: Dockerfile  fixture.yaml  go.mod  main.go
tests/fixtures/dockerfiles/go/10_grpc_service/: Dockerfile  fixture.yaml  go.mod  go.sum  main.go
tests/fixtures/dockerfiles/java/11_spring_maven/: Dockerfile  fixture.yaml  pom.xml
tests/fixtures/dockerfiles/java/12_gradle_multistage/: Dockerfile  build.gradle  fixture.yaml
tests/fixtures/dockerfiles/java/13_quarkus/: Dockerfile  (+2 more)
tests/harness/: __init__.py  converter.py  docker_helpers.py  dockerfile_parser.py  linter.py  loader.py  mcp_client.py  models.py  validator.py
tests/integration/: __init__.py  test_conversion_workflow.py
tests/unit/: __init__.py  test_converter.py  test_dockerfile_parser.py  test_linter.py  test_loader.py
(+49 files in other folders)
